Update ReviewDbStorage.java