@@ -17,6 +17,7 @@ import java.util.Optional;
 @Repository
 @RequiredArgsConstructor
 public class ReviewDbStorage implements ReviewStorage {
+
     private final JdbcTemplate jdbcTemplate;
 
     @Override
@@ -39,15 +40,38 @@ public class ReviewDbStorage implements ReviewStorage {
         }, keyHolder);
 
         review.setReviewId(keyHolder.getKey().longValue());
+        return review;
+    }
 
-        return findById(review.getReviewId()).get();
+    private void checkUserExists(Long userId) {
+        String sql = "SELECT COUNT(*) FROM users WHERE id = ?";
+        Integer count = jdbcTemplate.queryForObject(sql, Integer.class, userId);
+        if (count == null || count == 0) {
+            throw new NotFoundException("Пользователь с ID " + userId + " не найден");
+        }
+    }
+
+    private void checkFilmExists(Long filmId) {
+        String sql = "SELECT COUNT(*) FROM films WHERE id = ?";
+        Integer count = jdbcTemplate.queryForObject(sql, Integer.class, filmId);
+        if (count == null || count == 0) {
+            throw new NotFoundException("Фильм с ID " + filmId + " не найден");
+        }
+    }
+
+    private void checkReviewExists(Long reviewId) {
+        String sql = "SELECT COUNT(*) FROM reviews WHERE id = ?";
+        Integer count = jdbcTemplate.queryForObject(sql, Integer.class, reviewId);
+        if (count == null || count == 0) {
+            throw new NotFoundException("Отзыв с ID " + reviewId + " не найден");
+        }
     }
 
     @Override
     public Review update(Review review) {
         String sql = "UPDATE reviews SET content = ?, is_positive = ? WHERE id = ?";
         jdbcTemplate.update(sql, review.getContent(), review.getIsPositive(), review.getReviewId());
-        return findById(review.getReviewId()).get();
+        return review;
     }
 
     @Override
@@ -75,124 +99,107 @@ public class ReviewDbStorage implements ReviewStorage {
         return jdbcTemplate.query(sql, this::mapRowToReview, count);
     }
 
-    // Добавление
     @Override
-    public Review estimate(long reviewId, long userId, Integer estimation) {
+    public Review addLike(long reviewId, long userId) {
         checkReviewExists(reviewId);
         checkUserExists(userId);
 
-        String checkSql = "SELECT estimation FROM review_likes WHERE review_id = ? AND user_id = ?";
-        String updateSql = "UPDATE reviews SET useful = useful + ? WHERE id = ?";
-        String updateLikeSql = "UPDATE review_likes SET estimation = ? WHERE review_id = ? AND user_id = ?";
-        String insertSql = "INSERT INTO review_likes (review_id, user_id, estimation) VALUES (?, ?, ?)";
+        // проверяею существующий голос
+        String checkSql = "SELECT is_like FROM review_likes WHERE review_id = ? AND user_id = ?";
+        List<Boolean> existingVotes = jdbcTemplate.query(checkSql,
+                (rs, rowNum) -> rs.getBoolean("is_like"), reviewId, userId);
 
-        List<Integer> estimations = jdbcTemplate.query(checkSql,
-                (rs, rowNum) -> rs.getInt("estimation"), reviewId, userId);
-
-        if (!estimations.isEmpty()) {
-            if (estimations.getFirst().equals(estimation)) {
+        if (!existingVotes.isEmpty()) {
+            Boolean existingVote = existingVotes.get(0);
+            if (existingVote) {
+                // Уже лайкнул
                 return findById(reviewId).orElseThrow();
+            } else {
+                // был диз, тогдп меняю на лайк (+2 к useful)
+                String updateSql = "UPDATE reviews SET useful = useful + 2 WHERE id = ?";
+                jdbcTemplate.update(updateSql, reviewId);
+                String updateLikeSql = "UPDATE review_likes SET is_like = true WHERE review_id = ? AND user_id = ?";
+                jdbcTemplate.update(updateLikeSql, reviewId, userId);
             }
-
-            jdbcTemplate.update(updateSql, estimation > 5 ? 2 : -2, reviewId);
-            jdbcTemplate.update(updateLikeSql, estimation > 5 ? 2 : -2, reviewId, userId);
         } else {
-            jdbcTemplate.update(updateSql, estimation > 5 ? 1 : -1, reviewId);
-            jdbcTemplate.update(insertSql, reviewId, userId, estimation > 5 ? 1 : -1);
+            // новый лайк
+            String updateSql = "UPDATE reviews SET useful = useful + 1 WHERE id = ?";
+            jdbcTemplate.update(updateSql, reviewId);
+            String insertSql = "INSERT INTO review_likes (review_id, user_id, is_like) VALUES (?, ?, true)";
+            jdbcTemplate.update(insertSql, reviewId, userId);
         }
 
         return findById(reviewId).orElseThrow();
     }
 
-    // Удаление
     @Override
-    public void removeEstimate(long reviewId, long userId, Integer estimation) {
+    public Review addDislike(long reviewId, long userId) {
         checkReviewExists(reviewId);
         checkUserExists(userId);
 
-        String checkSql = "SELECT estimation FROM review_likes WHERE review_id = ? AND user_id = ?";
-        String updateSql = "UPDATE reviews SET useful = useful + ? WHERE id = ?";
-        String deleteSql = "DELETE FROM review_likes WHERE review_id = ? AND user_id = ?";
+        // проверяю существующий голос
+        String checkSql = "SELECT is_like FROM review_likes WHERE review_id = ? AND user_id = ?";
+        List<Boolean> existingVotes = jdbcTemplate.query(checkSql,
+                (rs, rowNum) -> rs.getBoolean("is_like"), reviewId, userId);
 
-        List<Integer> estimations = jdbcTemplate.query(checkSql,
-                (rs, rowNum) -> rs.getInt("estimation"), reviewId, userId);
+        if (!existingVotes.isEmpty()) {
+            Boolean existingVote = existingVotes.get(0);
+            if (!existingVote) {
+                // уже дизлайкнул
+                return findById(reviewId).orElseThrow();
+            } else {
+                // был лайк, тогда меняю на дизлайк (-2 к useful)
+                String updateSql = "UPDATE reviews SET useful = useful - 2 WHERE id = ?";
+                jdbcTemplate.update(updateSql, reviewId);
+                String updateLikeSql = "UPDATE review_likes SET is_like = false WHERE review_id = ? AND user_id = ?";
+                jdbcTemplate.update(updateLikeSql, reviewId, userId);
+            }
+        } else {
+            // новый диз
+            String updateSql = "UPDATE reviews SET useful = useful - 1 WHERE id = ?";
+            jdbcTemplate.update(updateSql, reviewId);
+            String insertSql = "INSERT INTO review_likes (review_id, user_id, is_like) VALUES (?, ?, false)";
+            jdbcTemplate.update(insertSql, reviewId, userId);
+        }
 
-        if (!estimations.isEmpty() && estimations.getFirst().equals(estimation)) {
-            jdbcTemplate.update(updateSql, estimation > 5 ? -1 : 1, reviewId);
+        return findById(reviewId).orElseThrow();
+    }
+
+    @Override
+    public void removeLike(long reviewId, long userId) {
+        checkReviewExists(reviewId);
+        checkUserExists(userId);
+
+        String checkSql = "SELECT is_like FROM review_likes WHERE review_id = ? AND user_id = ?";
+        List<Boolean> existingVotes = jdbcTemplate.query(checkSql,
+                (rs, rowNum) -> rs.getBoolean("is_like"), reviewId, userId);
+
+        if (!existingVotes.isEmpty() && existingVotes.get(0)) {
+            // удаляю только если был лайк
+            String updateSql = "UPDATE reviews SET useful = useful - 1 WHERE id = ?";
+            jdbcTemplate.update(updateSql, reviewId);
+            String deleteSql = "DELETE FROM review_likes WHERE review_id = ? AND user_id = ?";
             jdbcTemplate.update(deleteSql, reviewId, userId);
         }
     }
 
-//    @Override
-//    public Review addLike(long reviewId, long userId) {
-//        return processReviewVote(reviewId, userId, true);
-//    }
-//
-//    @Override
-//    public Review addDislike(long reviewId, long userId) {
-//        return processReviewVote(reviewId, userId, false);
-//    }
-//
-//    private Review processReviewVote(long reviewId, long userId, boolean isLike) {
-//        checkReviewExists(reviewId);
-//        checkUserExists(userId);
-//
-//        String checkSql = "SELECT is_like FROM review_likes WHERE review_id = ? AND user_id = ?";
-//        List<Boolean> existingVotes = jdbcTemplate.query(checkSql,
-//                (rs, rowNum) -> rs.getBoolean("is_like"), reviewId, userId);
-//
-//        if (!existingVotes.isEmpty()) {
-//            Boolean existingVote = existingVotes.get(0);
-//
-//            if (existingVote == isLike) {
-//                return findById(reviewId).orElseThrow();
-//            }
-//
-//            int usefulChange = isLike ? 2 : -2;
-//            String updateSql = "UPDATE reviews SET useful = useful + ? WHERE id = ?";
-//            jdbcTemplate.update(updateSql, usefulChange, reviewId);
-//
-//            String updateLikeSql = "UPDATE review_likes SET is_like = ? WHERE review_id = ? AND user_id = ?";
-//            jdbcTemplate.update(updateLikeSql, isLike, reviewId, userId);
-//        } else {
-//            int usefulChange = isLike ? 1 : -1;
-//            String updateSql = "UPDATE reviews SET useful = useful + ? WHERE id = ?";
-//            jdbcTemplate.update(updateSql, usefulChange, reviewId);
-//
-//            String insertSql = "INSERT INTO review_likes (review_id, user_id, is_like) VALUES (?, ?, ?)";
-//            jdbcTemplate.update(insertSql, reviewId, userId, isLike);
-//        }
-//
-//        return findById(reviewId).orElseThrow();
-//    }
+    @Override
+    public void removeDislike(long reviewId, long userId) {
+        checkReviewExists(reviewId);
+        checkUserExists(userId);
 
-//    @Override
-//    public void removeLike(long reviewId, long userId) {
-//        removeReviewVote(reviewId, userId, true);
-//    }
-//
-//    @Override
-//    public void removeDislike(long reviewId, long userId) {
-//        removeReviewVote(reviewId, userId, false);
-//    }
-//
-//    private void removeReviewVote(long reviewId, long userId, boolean isLike) {
-//        checkReviewExists(reviewId);
-//        checkUserExists(userId);
-//
-//        String checkSql = "SELECT is_like FROM review_likes WHERE review_id = ? AND user_id = ?";
-//        List<Boolean> existingVotes = jdbcTemplate.query(checkSql,
-//                (rs, rowNum) -> rs.getBoolean("is_like"), reviewId, userId);
-//
-//        if (!existingVotes.isEmpty() && existingVotes.get(0) == isLike) {
-//            int usefulChange = isLike ? -1 : 1;
-//            String updateSql = "UPDATE reviews SET useful = useful + ? WHERE id = ?";
-//            jdbcTemplate.update(updateSql, usefulChange, reviewId);
-//
-//            String deleteSql = "DELETE FROM review_likes WHERE review_id = ? AND user_id = ?";
-//            jdbcTemplate.update(deleteSql, reviewId, userId);
-//        }
-//    }
+        String checkSql = "SELECT is_like FROM review_likes WHERE review_id = ? AND user_id = ?";
+        List<Boolean> existingVotes = jdbcTemplate.query(checkSql,
+                (rs, rowNum) -> rs.getBoolean("is_like"), reviewId, userId);
+
+        if (!existingVotes.isEmpty() && !existingVotes.get(0)) {
+            // удаляю только если был дизлайк
+            String updateSql = "UPDATE reviews SET useful = useful + 1 WHERE id = ?";
+            jdbcTemplate.update(updateSql, reviewId);
+            String deleteSql = "DELETE FROM review_likes WHERE review_id = ? AND user_id = ?";
+            jdbcTemplate.update(deleteSql, reviewId, userId);
+        }
+    }
 
     @Override
     public int getUseful(long reviewId) {
@@ -215,28 +222,4 @@ public class ReviewDbStorage implements ReviewStorage {
         );
     }
 
-    private void checkUserExists(Long userId) {
-        String sql = "SELECT COUNT(*) FROM users WHERE id = ?";
-        Integer count = jdbcTemplate.queryForObject(sql, Integer.class, userId);
-
-        if (count == null || count == 0) {
-            throw new NotFoundException("Пользователь с ID " + userId + " не найден");
-        }
-    }
-
-    private void checkFilmExists(Long filmId) {
-        String sql = "SELECT COUNT(*) FROM films WHERE id = ?";
-        Integer count = jdbcTemplate.queryForObject(sql, Integer.class, filmId);
-        if (count == null || count == 0) {
-            throw new NotFoundException("Фильм с ID " + filmId + " не найден");
-        }
-    }
-
-    private void checkReviewExists(Long reviewId) {
-        String sql = "SELECT COUNT(*) FROM reviews WHERE id = ?";
-        Integer count = jdbcTemplate.queryForObject(sql, Integer.class, reviewId);
-        if (count == null || count == 0) {
-            throw new NotFoundException("Отзыв с ID " + reviewId + " не найден");
-        }
-    }
 }
